--- a/meta/1200-no-inv.Rmd
+++ b/meta/1200-no-inv.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "1100-inversion-doover"
+title: "1200-no-inv"
 output: html_document
 date: "2024-07-23"
 ---
@@ -7,6 +7,7 @@ date: "2024-07-23"
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, warning=FALSE, message=FALSE)
 ```
+
 
 ```{r}
 library(tidyverse)
@@ -19,42 +20,42 @@ library(viridis)
 library(ggpubr)
 ```
 
-We're going to redo the analyses of Campbell and Becker without inversions to see if it meaningfully changes anything. 
+We're going to redo the analyses of Campbell and Becker without inversions to see if it meaningfully changes anything but dropping all non-inv chroms. 
 Redoing 401.   
 
 Generate PCA and GL file
 
 ```{sh, eval=FALSE}
 srun -p high -t 16:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
--bam bamlists/60.bamlist -rf meta/no-inv.txt \
+-bam bamlists/60.bamlist -rf meta/no-inv-lgs.txt \
 -ref  genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna \
 -minInd 54 -minMapQ 10 -minQ 20 -GL 2 -doGLF 2 \
 -doMajorMinor 1 -doMaf 1 -SNP_pval 1e-6 \
 -doIBS 1 -doCounts 1 -doCov 1 -makeMatrix 1 -minMaf 0.05 \
--out outputs/401/60-ibs-90 > outputs/401/60-ibs-90.out 2> outputs/401/60-ibs-90.err &
+-out outputs/1200/60-ibs-90 > outputs/1200/60-ibs-90.out 2> outputs/1200/60-ibs-90.err &
 	
 
-srun -p high -t 04:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/401/60-ibs-90.beagle.gz -K 2 -o outputs/401/60-K2 &
-srun -p high -t 05:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/401/60-ibs-90.beagle.gz -K 3 -o outputs/401/60-K3 &
-srun -p high -t 06:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/401/60-ibs-90.beagle.gz -K 4 -o outputs/401/60-K4 &
-srun -p high -t 06:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/401/60-ibs-90.beagle.gz -K 5 -o outputs/401/60-K5 &
+srun -p high -t 04:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/1200/60-ibs-90.beagle.gz -K 2 -o outputs/1200/60-K2 &
+srun -p high -t 05:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/1200/60-ibs-90.beagle.gz -K 3 -o outputs/1200/60-K3 &
+srun -p high -t 06:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/1200/60-ibs-90.beagle.gz -K 4 -o outputs/1200/60-K4 &
+srun -p high -t 06:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/1200/60-ibs-90.beagle.gz -K 5 -o outputs/1200/60-K5 &
 
 
-srun -p high -t 09:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/401/60-ibs-90.beagle.gz -K 6 -o outputs/401/60-K6 &
+srun -p high -t 09:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/1200/60-ibs-90.beagle.gz -K 6 -o outputs/1200/60-K6 &
 
 # Generate GLS without doIBS
 srun -p high -t 16:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
--bam bamlists/60.bamlist -rf genome/lates-lgs.txt \
+-bam bamlists/60.bamlist -rf meta/no-inv-lgs.txt  \
 -anc  genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna \
 -minInd 54 -minMapQ 20 -minQ 20 -GL 1 -doGLF 2 \
 -doMajorMinor 1 -doPost 1 -doMaf 1 -SNP_pval 1e-6 \
 -minMaf 0.05 \
--out outputs/401/60-gls-90 > outputs/401/60-gls-90.out 2> outputs/401/60-gls-90.err &
+-out outputs/1200/60-gls-90 > outputs/1200/60-gls-90.out 2> outputs/1200/60-gls-90.err &
 
 ```
 
-	-> Number of sites retained after filtering: 7321852 
-
+	-> Number of sites retained after filtering: 7321852 (pre inversion)
+  -> Number of sites post inversion 
 
 
 ```{r}
@@ -72,7 +73,7 @@ round(median(meta$Coverage),2)
 ```
 
 ```{r}
-m <- as.matrix(read.table("outputs/401/60-ibs-90.covMat"))
+m <- as.matrix(read.table("outputs/1200/60-ibs-90.covMat"))
 eig <- eigen(m)
 var<-eig$values/sum(eig$values)
 cumvar<-cumsum(eig$values)/sum(eig$values)
@@ -99,7 +100,7 @@ ggplot(covs) +
   ggtitle("Genome-Wide PCA of L. calcarifer WGS Data") +
   theme(plot.title = element_text(hjust=0.5, face="bold"))
 
-ggsave("outputs/401/lates-c-genome-wide-pca-12.jpeg")
+ggsave("outputs/1200/lates-c-genome-wide-pca-12.jpeg")
 ```
 For figure  
 
@@ -147,8 +148,8 @@ pc13
 
 ```{r}
 ggarrange(pc12,pc13,ncol=2,widths=c(1,1.4))
-ggsave("outputs/401/combined-wgspcs.pdf", width=11, height=5)
-ggsave("outputs/401/combined-wgspcs.jpeg", width=11, height=5)
+ggsave("outputs/1200/combined-wgspcs.pdf", width=11, height=5)
+ggsave("outputs/1200/combined-wgspcs.jpeg", width=11, height=5)
 
 ```
 
@@ -221,19 +222,19 @@ ggplot(rdf) +
 ```
 
 ```{r}
-PlotAdmix("outputs/401/60-K2.qopt", meta)
+PlotAdmix("outputs/1200/60-K2.qopt", meta)
 ```
 
 
 ```{r}
-PlotAdmix("outputs/401/60-K3.qopt", meta)
+PlotAdmix("outputs/1200/60-K3.qopt", meta)
 ```
 ```{r}
-PlotAdmix("outputs/401/60-K4.qopt", meta)
+PlotAdmix("outputs/1200/60-K4.qopt", meta)
 ```
 
 ```{r}
-PlotAdmix("outputs/401/60-K5.qopt", meta)
+PlotAdmix("outputs/1200/60-K5.qopt", meta)
 ```
 
 
@@ -404,7 +405,7 @@ ggplot(rdf) +
   theme(axis.ticks.x = element_blank())
 
 }
-k4<-PlotAdmixNoLabs4("outputs/401/60-K4.qopt", meta)
+k4<-PlotAdmixNoLabs4("outputs/1200/60-K4.qopt", meta)
 k4
 ```
 
@@ -458,7 +459,7 @@ ggplot(rdf) +
   scale_fill_manual(values=c("#FE9F6DBF","#000004BF","#DE4968BF","#8C2981BF","#3B0F70BF"))
 
 }
-k5<-PlotAdmix5("outputs/401/60-K5.qopt", meta)
+k5<-PlotAdmix5("outputs/1200/60-K5.qopt", meta)
 k5
 ```
 
@@ -467,7 +468,7 @@ Let's plot.
 ```{r}
 ggarrange(k2,k3,k4,k5, ncol=1, heights = c(1,1,1,1.55))
 
-ggsave("outputs/401/combined-k-plots.pdf", width=11, height=8.5)
+ggsave("outputs/1200/combined-k-plots.pdf", width=11, height=8.5)
 ```
 
 ## Calling SNPs
@@ -476,12 +477,13 @@ ggsave("outputs/401/combined-k-plots.pdf", width=11, height=8.5)
 ```{sh, eval=FALSE}
 srun -t 72:00:00 -p high --mem=32G --nodes=1 --ntasks-per-node=1 --cpus-per-task=12 $HOME/angsd/angsd -nthreads 24 \
 -minInd 54 -bam bamlists/60.bamlist -ref genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna \
--rf genome/lates-lgs.txt -out outputs/401/snps-wgs  \
+-rf meta/no-inv-lgs.txt -out outputs/1200/snps-wgs  \
 -minMaf 0.05 -minMapQ 20 -minQ 20 -GL 1 -doMajorMinor 1 -doMaf 1 -SNP_pval 1e-6 \
--doGeno 2 -doPost 1 -postCutoff 0.9 -doPlink 2  > outputs/401/snps-wgs.out 2> outputs/401/snps-wgs.err &
+-doGeno 2 -doPost 1 -postCutoff 0.9 -doPlink 2  > outputs/1200/snps-wgs.out 2> outputs/1200/snps-wgs.err &
 
 ```
 	-> Number of sites retained after filtering: 3327142 
+	-> After removal of inversion regions
 
 Creating a vcf
 
@@ -492,8 +494,8 @@ bgzip plink.vcf
 tabix plink.vcf.gz
 
 #renaming vcf
-bcftools reheader --samples bamlists/60-sample-names.txt -o outputs/401/renamed.vcf.gz outputs/401/plink.vcf.gz
+bcftools reheader --samples bamlists/60-sample-names.txt -o outputs/1200/renamed.vcf.gz outputs/1200/plink.vcf.gz
 
-bcftools +prune -l 0.20 -w 10000 outputs/401/renamed.vcf.gz > outputs/401/pruned.vcf
-bcftools +prune -l 0.30 -w 10000 outputs/401/renamed.vcf.gz > outputs/401/pruned-03.vcf
+bcftools +prune -l 0.20 -w 10000 outputs/1200/renamed.vcf.gz > outputs/1200/pruned.vcf
+bcftools +prune -l 0.30 -w 10000 outputs/1200/renamed.vcf.gz > outputs/1200/pruned-03.vcf
 ```
